init:first commit

--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.7.0",
     "core-js": "^3.6.4",
+    "jquery": "^3.4.1",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.1.5",
+    "vue2-dropzone": "^3.6.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
